# avr-tester

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  rust-toolchain  rust-toolchain.toml  shell.nix
avr-simulator/: Cargo.toml
avr-simulator/src/: adc.rs  avr.rs  duration.rs  firmware.rs  ioctl.rs  lib.rs  logging.rs  port.rs  spi.rs  state.rs  twi.rs  uart.rs
avr-tester/: Cargo.toml
avr-tester-e2e/: Cargo.toml
avr-tester-e2e/delay/: Cargo.toml
avr-tester-e2e/pins/: Cargo.toml
avr-tester-e2e/pins/.cargo/: config
avr-tester-e2e/pins/src/: main.rs
avr-tester-e2e/uart-eval/: Cargo.toml
avr-tester-e2e/uart-eval/src/: main.rs
avr-tester-e2e/uart-rot13/: Cargo.toml
avr-tester-e2e/uart-rot13/src/: main.rs
avr-tester-fixtures/: Cargo.toml  README.md  dump.asm
avr-tester-fixtures/.cargo/: config.toml
avr-tester-fixtures/src/: acc_bits.rs  acc_eval.rs  acc_fractal.rs  analog_pins.rs  digital_pins.rs  shift_register.rs  spi.rs  spi_component.rs  spi_master.rs  spi_slave.rs  timeout.rs  twi.rs  uart.rs
avr-tester-tests/: Cargo.toml  README.md
avr-tester-tests/components-shift-register/: Cargo.toml
avr-tester-tests/components-shift-register/src/: main.rs
avr-tester-tests/components-spi/: Cargo.toml
avr-tester-tests/components-spi/src/: main.rs
avr-tester-tests/pins-analog/: Cargo.toml
avr-tester-tests/pins-analog/src/: main.rs
avr-tester-tests/pins-digital/: Cargo.toml
avr-tester-tests/pins-digital/src/: main.rs
avr-tester-tests/spi/: Cargo.toml
avr-tester-tests/spi/src/: main.rs
avr-tester-tests/timeout/: Cargo.toml
avr-tester-tests/timeout/src/: main.rs
avr-tester-tests/uart/: Cargo.toml
avr-tester-tests/uart/src/: main.rs
avr-tester-tests/xx-bits/: Cargo.toml
avr-tester-tests/xx-bits/src/: main.rs
avr-tester-tests/xx-eval/: Cargo.toml
avr-tester-tests/xx-eval/.cargo/: config
avr-tester-tests/xx-eval/src/: main.rs
avr-tester/src/: builder.rs  components.rs  duration_ext.rs  lib.rs  pins.rs  read.rs  simulator.rs  spi.rs  twi.rs  uart.rs  utils.rs  write.rs
avr-tester/src/components/: component_controller.rs  component_handle.rs  component_runtime.rs  component_state.rs  futures.rs
avr-tester/src/components/component_controller/: waker.rs
avr-tester/src/components/futures/: resume.rs  sleep.rs
avr-tester/src/pins/: analog_pin.rs  digital_pin.rs
avr-tester/src/simulator/: adcs.rs  avr.rs  cpu_cycles_taken.rs  cpu_duration.rs  cpu_state.rs  elf_firmware.rs  ioctl.rs  logs.rs  port.rs  ports.rs  uart.rs
avr-tester/tests/: acc.rs  acceptance.rs  e2e.rs  examples.rs  tests.rs
avr-tester/tests/acc/: bits.rs  eval.rs  fractal.rs
avr-tester/tests/acceptance/: bits.rs  eval.rs
avr-tester/tests/e2e/: delay.rs  pins.rs  sources  uart_eval.rs  uart_rot13.rs
avr-tester/tests/examples/: analog_pins.rs  digital_pins.rs  shift_register.rs  spi.rs  spi_component.rs  spi_master.rs  spi_slave.rs  timeout.rs  twi.rs  uart.rs
avr-tester/tests/tests/: components-shift-register.rs  components-spi.rs  pins-analog.rs  pins-digital.rs  spi.rs  timeout.rs  uart.rs
avr-tester/tests/tests/xx/: README.md  bits.rs  eval.rs
