[package]
name = "avr-simulator"
version = "0.2.3"
edition = "2021"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
license = "MIT"
description = "Bare-bones wrapper for simavr"
repository = "https://github.com/Patryk27/avr-tester"
keywords = ["avr", "test", "framework", "microcontroller", "simavr"]

[dependencies]
libc = "0.2"
simavr-ffi = "1.0"

[dev-dependencies]
test-case = "2.1"
