[package]
name = "avr-simulator"
version = "0.3.0"
edition = "2021"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
license = "MIT"
description = "Oxidized interface for simavr"
repository = "https://github.com/Patryk27/avr-tester"
keywords = ["avr", "test", "framework", "microcontroller", "simavr"]

[dependencies]
libc = "0.2"
simavr-ffi = { version = "1.1", features = ["patch-twi-inconsistencies"] }

[dev-dependencies]
test-case = "2.1"
