[package]
name = "avr-simulator"
version = "0.4.0"
edition = "2024"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
license = "MIT"
description = "Oxidized interface for simavr"
repository = "https://github.com/Patryk27/avr-tester"
keywords = ["avr", "test", "framework", "microcontroller", "simavr"]

[dependencies]
libc = "0.2"
simavr-ffi = { git="https://github.com/orukusaki/simavr-ffi", branch="update-simavr"}

[dev-dependencies]
test-case = "2.1"
