[package]
name = "avr-tester"
version = "0.3.0"
edition = "2021"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
license = "MIT"
description = "Framework for testing AVR binaries"
readme = "../README.md"
repository = "https://github.com/Patryk27/avr-tester"
keywords = ["avr", "test", "framework", "microcontroller", "simavr"]

[dependencies]
avr-simulator = { path = "../avr-simulator", version = "0.3.0" }

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4.1"
rand = "0.8"
