[package]
name = "e2e-uart-rot13"
version = "0.1.0"
edition = "2021"

[dependencies]
atmega-hal = { git = "https://github.com/Rahix/avr-hal", features = ["atmega328p", "rt"] }
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal" }
panic-halt = "0.2.0"
ufmt = "0.1"
void = { version = "1.0", default-features = false }
